# kora

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md  SECURITY.md  config.toml.example  stations.toml.example
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/skills/pr-ready/: SKILL.md
.github/workflows/: ci.yml  release.yml
docs/adr/: 001-audio-pipeline-threading.md  002-single-crate-structure.md  003-provider-trait-design.md  004-session-persistence-toml.md  005-ring-buffer-rtrb.md  README.md
scripts/: release.ps1
src/: daemon.rs  main.rs  media_controls.rs
src/backend/: cpal_backend.rs
src/core/: config.rs  favorites.rs  mod.rs  session.rs  track.rs  types.rs
src/ipc/: client.rs  protocol.rs  server.rs
src/playback/: chapters.rs  decoder.rs  dsp.rs  engine.rs  eq.rs  fft.rs  lyrics.rs  mod.rs  player.rs  replaygain.rs  speed.rs  stream_decoder.rs
src/providers/: download.rs  local.rs  mod.rs  opml.rs  podcast.rs  radio.rs  stations.rs
src/tui/: app.rs  file_browser.rs  mod.rs  podcast_view.rs  theme.rs
